# learning_opencv

lec4/: CMakeLists.txt  main.cpp  note.txt
lec4/cmake/: utils.cmake
lec4/include/: AddRoi.hpp  LinearBlending.hpp
lec4/src/: AddRoi.cpp  LinearBlending.cpp
lec5/: CMakeLists.txt  main.cpp  note.txt
lec5/include/: MultiChannelBlending.hpp
lec5/src/: MultiChannelBlending.cpp
lec6/: CMakeLists.txt  main.cpp  note.txt
lec6/include/: UseTrackbar.hpp
lec6/src/: UseTrackbar.cpp
